# tulpje-next

./: .env.example  .gitignore  Cargo.toml  README.md  compose.swarm.yml  compose.yml  docker-compose.override.example.yml  docker-compose.yml
.cargo/: audit.toml
.sqlx/: query-1c4fb940e7cc93fb074eb354d354ee633496d9e0f010fb834675baa442c2c5d2.json  query-31cf7c317b0bfa7eb0c4215d854d2bf562934b2a8b0743b30fc91d052a1a0917.json  query-527f6cd382cd026ec91419eb6dad45e783ef734bdd0b94cc3ab01872ab15d7a1.json  query-60397b85d063117afda5d0ef6943d0ee3be03e9400327a0884772fc23aeff03d.json  query-67273d94812abe4048da949c3dbeaf9c0af1f4b5893dd2725681e270a58735df.json  query-6ab9848d9a3521c05a3be8347cb103ccb9323eaa2e422c2e462b3dc0d588a748.json  query-6e5d7f6e8d9eab16ad7124570dcff9ce5f8a8ce230e2d48f0a51c5d2ef4d3487.json  query-8f48b824027161159814b1382493b589950b89d36091d47373d4a83f1eeaf633.json  query-a365e448c928a117265bc775cfe026e7279a87cb4d43fd63571afc18cb314c96.json  query-ad743bd43e04f62117093c862289e70e9c54743cb482b8b7588d5414318773ff.json  query-bd190322e89d1f1f927d3d3939360c0b7ad868ed7bda7000685d7d16b7f3c74a.json  query-c819d25a310d6011313aaf9598cc463ee3fc3c88da2050a11405cc8ebe930b0f.json  query-e11ad169a511c9a8ab09b93797dfcaaf74ef85799891c5fb4b359b8e0cf8962d.json
benchmarking/: Cargo.toml
benchmarking/src/: main.rs
contrib/: check.sh  deploy.fish  push.fish  run-local.sh
docker/: Dockerfile  Dockerfile.discord-proxy  Dockerfile.gateway  Dockerfile.gateway-queue  Dockerfile.handler
docker/discord_proxy/: Dockerfile
docker/rabbitmq/: Dockerfile
framework/: Cargo.toml
framework/benches/: framework.rs
framework/src/: context.rs  handler.rs  interaction.rs  lib.rs  macros.rs  module.rs  registry.rs  scheduler.rs
framework/src/context/: command_context.rs  component_interaction_context.rs  event_context.rs  modal_context.rs  task_context.rs
framework/src/handler/: command_handler.rs  component_interaction_handler.rs  event_handler.rs  task_handler.rs
framework/src/module/: builder.rs  module.rs  registry.rs
gateway/: Cargo.toml  build.rs
gateway/src/: amqp.rs  cache.rs  config.rs  main.rs  metrics.rs  shard_state.rs
gateway/src/amqp/: amqprs.rs  lapin.rs
gateway/src/cache/: config.rs  user.rs
handler/: Cargo.toml
handler/src/: commands.rs  config.rs  context.rs  db.rs  main.rs  metrics.rs  modules.rs
handler/src/amqp/: amqprs.rs  lapin.rs
handler/src/modules/: core.rs  emoji.rs  pk.rs  stats.rs
handler/src/modules/emoji/: clone.rs  commands.rs  db.rs  event_handler.rs  event_handlers.rs  shared.rs
handler/src/modules/pk/: commands.rs  db.rs  fronters.rs  roles.rs  util.rs
handler/src/modules/pk/fronters/: commands.rs  db.rs  tasks.rs
manager/: Cargo.toml
manager/src/: main.rs
migrations/: 20241220155323_create_emoji_uses.sql  20241227155926_create_pk_fronters.sql  20241227155947_create_pk_guilds.sql  20250102220244_create_guild_modules.sql
shared/: Cargo.toml
shared/src/: color.rs  lib.rs  metrics.rs  shard_state.rs
utils/: Cargo.toml
utils/src/: check_http.rs  secret_loader.rs
