[workspace]
members = [
	"gateway", "handler", "manager", "utils", "shared", "framework",
]

resolver = "2"

[workspace.package]
version = "0.6.0"

[workspace.lints.clippy]
# give a reason why it's allowed, thanks
allow_attributes = "deny"
# it's recommended to no longer use mod.rs files
mod_module_files = "deny"
# we like consistency :)
renamed_function_params = "warn"
# rust can't always optimise them out so remove them
redundant_clone = "warn"
# for loops are clearer if we can use them
needless_for_each = "warn"
# clearer we're doing a "cheap" clone this way
clone_on_ref_ptr = "warn"
# it's probably mistake unless explicitly allowed
integer_division = "warn"
# we should explicitly ok data loss when converting types
cast_lossless = "warn"
cast_precision_loss = "warn"
# I do like this syntax, but it might be less clear
if_then_some_else_none = "warn"
# the suggestions are usually not great, but this does usually indicate we can
# refactor the code to
option_if_let_else = "warn"
# don't wanna evaluate things unnecessarily
or_fun_call = "warn"

indexing_slicing = "warn"
manual_assert = "warn"
redundant_else = "warn"
unwrap_in_result = "warn"
unneeded_field_pattern = "warn"
ignored_unit_patterns = "warn"
semicolon_if_nothing_returned = "warn"
unused_trait_names = "warn"
implicit_clone = "warn"
manual_string_new = "warn"
from_iter_instead_of_collect = "warn"
needless_pass_by_value = "warn"
use_self = "warn"
get_unwrap = "warn"
partial_pub_fields = "warn"
missing_assert_message = "warn"
match_bool = "deny"
