[package]
name = "tulpje-framework"
edition = "2021"
version.workspace = true

[dependencies]
tulpje-shared = { path = "../shared" }
twilight-http = { version = "0.16.0-rc.1", features = ["decompression", "rustls-webpki-roots"], default-features = false }
twilight-model = "0.16.0-rc.1"
twilight-gateway = "0.16.0-rc.1"
twilight-util = { version = "0.16.0-rc.1", features = ["builder"] }
tracing = "0.1.41"
