[package]
name = "tulpje-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
tulpje-shared = { path = "../shared" }
rkyv = { version = "0.8.9", optional = true }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
redlight = { git = "https://github.com/MaxOhn/redlight.git", rev = "cd0a65d", version = "0.1.0", features = ["bytecheck"], optional = true }
twilight-util = { version = "0.15.4", features = ["builder"] }
lapin = "2.5.0"
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "1.1.0"
uuid = { version = "1.11.0", features = ["v7", "serde"] }

[build-dependencies]
vergen-gitcl = { version = "1.0.1", features = ["build"] }

[features]
cache = [ "dep:redlight", "dep:rkyv" ]
