[package]
name = "tulpje-gateway"
edition = "2021"
version.workspace = true

[features]
default = ["amqp-amqprs"]

cache = [ "dep:redlight", "dep:rkyv" ]

amqp-lapin = ["dep:lapin", "dep:tokio-executor-trait", "dep:tokio-reactor-trait"]
amqp-amqprs = ["dep:amqprs"]

[dependencies]
tulpje-shared = { path = "../shared" }
rkyv = { version = "0.8.9", optional = true }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twilight-gateway = { version = "0.16.0-rc.1", features = ["rustls-webpki-roots" ] }
twilight-http = { version = "0.16.0-rc.1", features = ["decompression", "rustls-webpki-roots"], default-features = false }
twilight-model = "0.16.0-rc.1"
redlight = { git = "https://github.com/MaxOhn/redlight.git", rev = "cd0a65d", version = "0.1.0", features = ["bytecheck"], optional = true }
twilight-util = { version = "0.16.0-rc.1", features = ["builder"] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
serde-envfile = "0.1.0"
serde = { version = "1.0.216", features = ["derive"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "charset", "http2"] }
bb8-redis = "0.18.0"
bb8 = "0.9.0"
futures-util = "0.3.31"

# amqp-amqprs
amqprs = { version = "2.1.0", features = ["compliance_assert", "traces", "urispec"], optional = true }

# amqp-lapin
lapin = { version = "2.5.0", optional = true }
tokio-executor-trait = { version = "2.1.3", optional = true }
tokio-reactor-trait = { version = "1.1.0", optional = true }

[build-dependencies]
vergen-gitcl = { version = "1.0.1", features = ["build"] }
