[package]
name = "tulpje-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
tulpje-shared = { path = "../shared" }
futures = "0.3.31"
lapin = "2.5.0"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "1.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twilight-gateway = "0.15.4"
twilight-http = { version = "0.15.4", features = ["decompression", "rustls-webpki-roots"], default-features = false }
twilight-model = "0.15.4"
twilight-util = { version = "0.15.4", features = ["builder"] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
dotenvy = "0.15.7"
serde-envfile = "0.1.0"
serde = { version = "1.0.216", features = ["derive"] }
