[package]
name = "tulpje-handler"
edition = "2021"
version.workspace = true

[dependencies]
tulpje-shared = { path = "../shared" }
tulpje-framework = { path = "../framework" }
futures = "0.3.31"
lapin = "2.5.0"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
tokio-executor-trait = "2.1.3"
tokio-reactor-trait = "1.1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
twilight-gateway = "0.16.0-rc.1"
twilight-http = { version = "0.16.0-rc.1", features = ["decompression", "rustls-webpki-roots"], default-features = false }
twilight-model = "0.16.0-rc.1"
twilight-util = { version = "0.16.0-rc.1", features = ["builder"] }
uuid = { version = "1.11.0", features = ["v7", "serde"] }
dotenvy = "0.15.7"
serde-envfile = "0.1.0"
serde = { version = "1.0.216", features = ["derive"] }
chrono = "0.4.39"
bb8-redis = "0.18.0"
bb8 = "0.9.0"
num-format = "0.4.4"
regex = "1.11.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "chrono", "json", "macros", "migrate"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "charset", "http2"] }
base64 = "0.22.1"
async-cron-scheduler = { version = "2.0.1", features = ["logging"] }
pkrs = { git = "https://github.com/z0w13/pkrs.git", version = "0.4.0", default-features = false, features = ["reqwest-client", "rustls-tls"] }
serde_either = "0.2.1"

[build-dependencies]
vergen-gitcl = { version = "1.0.2", features = ["build"] }
