[package]
name = "tulpje-manager"
edition = "2021"
version.workspace = true

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
twilight-http = { version = "0.15.4", features = ["decompression", "rustls-webpki-roots"], default-features = false }
